<resources>
    <string name="app_name">eGFR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_patID">Patient ID</string>
    <string name="unit_patID" translatable="false"></string>
    <string name="btn_patID">Fetch</string>

    <string name="hint_age">Age (years)</string>
    <string name="unit_age">years</string>

    <string name="hint_scr" translatable="false">Serum Creatinine</string>
    <string name="unit_scr" translatable="false">mg/dL</string>

    <string name="hint_cysc" translatable="false">Serum Cystatine C</string>
    <string name="unit_cysc" translatable="false">mg/dL</string>

    <string name="hint_hgt">Height (cm)</string>
    <string name="unit_hgt" translatable="false">cm</string>

    <string name="hint_wgt">Weight (kg)</string>
    <string name="unit_wgt" translatable="false">kg</string>

    <string name="hint_bsa">Body Surface Area</string>
    <string name="unit_bsa" translatable="false">m^2</string>

    <string name="text_FAS">FAS</string>
    <string name="extra_FAS" translatable="false">Full Age Spectrum (BSA 1.73 m sq)</string>

    <string-array name="array_sex">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_settings">Settings</string>

    <string name="button_go">GO!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
